--- a/blocks/page.css
+++ b/blocks/page.css
@@ -17,13 +17,12 @@
   min-height: 100vh;
 }
 
-@media screen and (max-width: 1100px) {
+/* @media screen and (max-width: 800px) {
   .page__section {
-    max-width: calc(100% - 40%);
+    max-width: calc(100% - 20%);
   }
-}
+} */
 @media screen and (max-width: 320px) {
   .page__section {
-  }
-  
+    max-width: calc(100% - 20%);
 }
